Add Eslint and Jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,7 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "@controllers/*": ["./src/controllers/*"],
-      "@models/*": ["./src/models/*"],
+      "@/*": ["./src/*"],
     }
   }
 }
