--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,9 @@
     "emitDecoratorMetadata": true,        
     "skipLibCheck": true,                    
     "forceConsistentCasingInFileNames": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["./src/*"],
+      "@/*": ["*"],
     }
   }
 }
